--- a/api.ipynb
+++ b/api.ipynb
@@ -2,34 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "%reload_ext autoreload"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "datetime.datetime(2020, 11, 30, 14, 47, 16, 164133)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# to pull off the unfinished date\n",
-    "datetime.datetime.utcnow()"
    ]
   },
   {
@@ -47,6 +35,347 @@
     "\n",
     "from structs import Pips, CurrencyPair\n",
     "from strategy.fractals import FractalStrategy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_times = []\n",
+    "\n",
+    "start = datetime.datetime.strptime(\"00:00\", \"%H:%M\")\n",
+    "end = datetime.datetime.strptime(\"20:55\", \"%H:%M\")\n",
+    "\n",
+    "t = start\n",
+    "\n",
+    "while t <= end:\n",
+    "    all_times.append(t.strftime(\"%H:%M\"))\n",
+    "    t += datetime.timedelta(minutes=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['00:00',\n",
+       " '00:05',\n",
+       " '00:10',\n",
+       " '00:15',\n",
+       " '00:20',\n",
+       " '00:25',\n",
+       " '00:30',\n",
+       " '00:35',\n",
+       " '00:40',\n",
+       " '00:45',\n",
+       " '00:50',\n",
+       " '00:55',\n",
+       " '01:00',\n",
+       " '01:05',\n",
+       " '01:10',\n",
+       " '01:15',\n",
+       " '01:20',\n",
+       " '01:25',\n",
+       " '01:30',\n",
+       " '01:35',\n",
+       " '01:40',\n",
+       " '01:45',\n",
+       " '01:50',\n",
+       " '01:55',\n",
+       " '02:00',\n",
+       " '02:05',\n",
+       " '02:10',\n",
+       " '02:15',\n",
+       " '02:20',\n",
+       " '02:25',\n",
+       " '02:30',\n",
+       " '02:35',\n",
+       " '02:40',\n",
+       " '02:45',\n",
+       " '02:50',\n",
+       " '02:55',\n",
+       " '03:00',\n",
+       " '03:05',\n",
+       " '03:10',\n",
+       " '03:15',\n",
+       " '03:20',\n",
+       " '03:25',\n",
+       " '03:30',\n",
+       " '03:35',\n",
+       " '03:40',\n",
+       " '03:45',\n",
+       " '03:50',\n",
+       " '03:55',\n",
+       " '04:00',\n",
+       " '04:05',\n",
+       " '04:10',\n",
+       " '04:15',\n",
+       " '04:20',\n",
+       " '04:25',\n",
+       " '04:30',\n",
+       " '04:35',\n",
+       " '04:40',\n",
+       " '04:45',\n",
+       " '04:50',\n",
+       " '04:55',\n",
+       " '05:00',\n",
+       " '05:05',\n",
+       " '05:10',\n",
+       " '05:15',\n",
+       " '05:20',\n",
+       " '05:25',\n",
+       " '05:30',\n",
+       " '05:35',\n",
+       " '05:40',\n",
+       " '05:45',\n",
+       " '05:50',\n",
+       " '05:55',\n",
+       " '06:00',\n",
+       " '06:05',\n",
+       " '06:10',\n",
+       " '06:15',\n",
+       " '06:20',\n",
+       " '06:25',\n",
+       " '06:30',\n",
+       " '06:35',\n",
+       " '06:40',\n",
+       " '06:45',\n",
+       " '06:50',\n",
+       " '06:55',\n",
+       " '07:00',\n",
+       " '07:05',\n",
+       " '07:10',\n",
+       " '07:15',\n",
+       " '07:20',\n",
+       " '07:25',\n",
+       " '07:30',\n",
+       " '07:35',\n",
+       " '07:40',\n",
+       " '07:45',\n",
+       " '07:50',\n",
+       " '07:55',\n",
+       " '08:00',\n",
+       " '08:05',\n",
+       " '08:10',\n",
+       " '08:15',\n",
+       " '08:20',\n",
+       " '08:25',\n",
+       " '08:30',\n",
+       " '08:35',\n",
+       " '08:40',\n",
+       " '08:45',\n",
+       " '08:50',\n",
+       " '08:55',\n",
+       " '09:00',\n",
+       " '09:05',\n",
+       " '09:10',\n",
+       " '09:15',\n",
+       " '09:20',\n",
+       " '09:25',\n",
+       " '09:30',\n",
+       " '09:35',\n",
+       " '09:40',\n",
+       " '09:45',\n",
+       " '09:50',\n",
+       " '09:55',\n",
+       " '10:00',\n",
+       " '10:05',\n",
+       " '10:10',\n",
+       " '10:15',\n",
+       " '10:20',\n",
+       " '10:25',\n",
+       " '10:30',\n",
+       " '10:35',\n",
+       " '10:40',\n",
+       " '10:45',\n",
+       " '10:50',\n",
+       " '10:55',\n",
+       " '11:00',\n",
+       " '11:05',\n",
+       " '11:10',\n",
+       " '11:15',\n",
+       " '11:20',\n",
+       " '11:25',\n",
+       " '11:30',\n",
+       " '11:35',\n",
+       " '11:40',\n",
+       " '11:45',\n",
+       " '11:50',\n",
+       " '11:55',\n",
+       " '12:00',\n",
+       " '12:05',\n",
+       " '12:10',\n",
+       " '12:15',\n",
+       " '12:20',\n",
+       " '12:25',\n",
+       " '12:30',\n",
+       " '12:35',\n",
+       " '12:40',\n",
+       " '12:45',\n",
+       " '12:50',\n",
+       " '12:55',\n",
+       " '13:00',\n",
+       " '13:05',\n",
+       " '13:10',\n",
+       " '13:15',\n",
+       " '13:20',\n",
+       " '13:25',\n",
+       " '13:30',\n",
+       " '13:35',\n",
+       " '13:40',\n",
+       " '13:45',\n",
+       " '13:50',\n",
+       " '13:55',\n",
+       " '14:00',\n",
+       " '14:05',\n",
+       " '14:10',\n",
+       " '14:15',\n",
+       " '14:20',\n",
+       " '14:25',\n",
+       " '14:30',\n",
+       " '14:35',\n",
+       " '14:40',\n",
+       " '14:45',\n",
+       " '14:50',\n",
+       " '14:55',\n",
+       " '15:00',\n",
+       " '15:05',\n",
+       " '15:10',\n",
+       " '15:15',\n",
+       " '15:20',\n",
+       " '15:25',\n",
+       " '15:30',\n",
+       " '15:35',\n",
+       " '15:40',\n",
+       " '15:45',\n",
+       " '15:50',\n",
+       " '15:55',\n",
+       " '16:00',\n",
+       " '16:05',\n",
+       " '16:10',\n",
+       " '16:15',\n",
+       " '16:20',\n",
+       " '16:25',\n",
+       " '16:30',\n",
+       " '16:35',\n",
+       " '16:40',\n",
+       " '16:45',\n",
+       " '16:50',\n",
+       " '16:55',\n",
+       " '17:00',\n",
+       " '17:05',\n",
+       " '17:10',\n",
+       " '17:15',\n",
+       " '17:20',\n",
+       " '17:25',\n",
+       " '17:30',\n",
+       " '17:35',\n",
+       " '17:40',\n",
+       " '17:45',\n",
+       " '17:50',\n",
+       " '17:55',\n",
+       " '18:00',\n",
+       " '18:05',\n",
+       " '18:10',\n",
+       " '18:15',\n",
+       " '18:20',\n",
+       " '18:25',\n",
+       " '18:30',\n",
+       " '18:35',\n",
+       " '18:40',\n",
+       " '18:45',\n",
+       " '18:50',\n",
+       " '18:55',\n",
+       " '19:00',\n",
+       " '19:05',\n",
+       " '19:10',\n",
+       " '19:15',\n",
+       " '19:20',\n",
+       " '19:25',\n",
+       " '19:30',\n",
+       " '19:35',\n",
+       " '19:40',\n",
+       " '19:45',\n",
+       " '19:50',\n",
+       " '19:55',\n",
+       " '20:00',\n",
+       " '20:05',\n",
+       " '20:10',\n",
+       " '20:15',\n",
+       " '20:20',\n",
+       " '20:25',\n",
+       " '20:30',\n",
+       " '20:35',\n",
+       " '20:40',\n",
+       " '20:45',\n",
+       " '20:50',\n",
+       " '20:55']"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_times"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# to pull off the unfinished date\n",
+    "now = datetime.datetime.utcnow()\n",
+    "closest = now - datetime.timedelta(minutes=now.minute % 5,\n",
+    "                                   seconds=now.second,\n",
+    "                                   microseconds=now.microsecond)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2020, 11, 30, 18, 30)"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "closest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2020-11-30 18:33:27.570835\n",
+      "2020-11-30 18:30:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(now)\n",
+    "print(closest)"
    ]
   },
   {
@@ -119,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +457,7 @@
        "(None, None)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,6 +479,167 @@
     "        print('Price is between fractals')\n",
     "    \n",
     "(upper_fractal, lower_fractal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Bid     1.19558\n",
+       "Ask     1.19565\n",
+       "High    1.20035\n",
+       "Low     1.19417\n",
+       "Name: 2020-11-30 18:38:02.097000, dtype: float64"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "last_price"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "now = datetime.datetime.utcnow()\n",
+    "closest = now - datetime.timedelta(minutes=(now.minute%5), seconds=now.second, microseconds=now.microsecond)\n",
+    "closest += datetime.timedelta(minutes=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2020-11-30 19:40:46.527210\n",
+      "2020-11-30 19:45:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(now)\n",
+    "print(closest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "\n",
+    "class ScheduleHelper:\n",
+    "\n",
+    "    day_map = {'Sunday': 1, 'Monday': 2, 'Tuesday': 3, 'Wednesday': 4, 'Thursday': 5, 'Friday': 6, 'Saturday': 7}\n",
+    "\n",
+    "    def __init__(self, time_now, frequency):\n",
+    "\n",
+    "        self._time_now = time_now\n",
+    "        self._frequency = frequency\n",
+    "\n",
+    "    def get_schedule(self, day: str):\n",
+    "        print(self.weeknumber_now)\n",
+    "        if self.weeknumber_now < ScheduleHelper.day_map[day]:\n",
+    "            return self.get_time_intervals('00:00', '23:55')\n",
+    "        elif self.weeknumber_now == ScheduleHelper.day_map[day]:\n",
+    "            print('here')\n",
+    "            next_time = self._time_now - datetime.timedelta(minutes=(self._time_now.minute % 5),\n",
+    "                                                            seconds=self._time_now.second,\n",
+    "                                                            microseconds=self._time_now.microsecond)\n",
+    "            next_time += datetime.timedelta(minutes=5)\n",
+    "            return self.get_time_intervals(next_time.strftime('%H:%M'), '23:55')\n",
+    "        else:\n",
+    "            return []\n",
+    "\n",
+    "    @property\n",
+    "    def monday(self) -> List[str]:\n",
+    "        return self.get_schedule('Monday')\n",
+    "\n",
+    "    @property\n",
+    "    def tuesday(self) -> List[str]:\n",
+    "        return self.get_schedule('Tuesday')\n",
+    "\n",
+    "    @property\n",
+    "    def wednesday(self) -> List[str]:\n",
+    "        return self.get_schedule('Wednesday')\n",
+    "\n",
+    "    @property\n",
+    "    def thursday(self) -> List[str]:\n",
+    "        return self.get_schedule('Thursday')\n",
+    "\n",
+    "    @property\n",
+    "    def friday(self) -> List[str]:\n",
+    "        return self.get_schedule('Friday')\n",
+    "\n",
+    "    @property\n",
+    "    def weeknumber_now(self) -> int:\n",
+    "        return int(self._time_now.strftime('%w')) + 1\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def get_time_intervals(start: str, end: str) -> List[str]:\n",
+    "        all_times = []\n",
+    "        print(start)\n",
+    "        start = datetime.datetime.strptime(start, \"%H:%M\")\n",
+    "        end = datetime.datetime.strptime(end, \"%H:%M\")\n",
+    "\n",
+    "        t = start\n",
+    "\n",
+    "        while t <= end:\n",
+    "            all_times.append(t.strftime(\"%H:%M\"))\n",
+    "            t += datetime.timedelta(minutes=5)\n",
+    "\n",
+    "        return all_times"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "helper = ScheduleHelper(datetime.datetime.utcnow(), 'm5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 195,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "helper.monday"
    ]
   },
   {
